<resources>
    <string name="app_name">Zakat Calculator</string>
    
    <string name="obosthan">যাকাতের অবস্থানঃ</string>
    <string name="obosthanD">যাকাত ইসলামের ফরজকর্মসমূহের একটি এবং ইসলামের তৃতীয় রুকন। আল্লাহ তাআলা বলেনঃ\n\n(وَأَقِيمُواْ ٱلصَّلَوٰةَ وَءَاتُواْ ) [النور:56]\n\n{তোমরা নামাজ প্রতিষ্ঠা করো ও যাকাত প্রদান করো।}[ সূরা আন-নূর:৫৬]\nনবী সাল্লাল্লাহু আলাইহি ওয়া সাল্লাম বলেছেন,‘ইসলাম পাঁচটি বিষয়ের ওপর নির্মিত: এ সাক্ষ্য দেয়া যে আল্লাহ ব্যতীত কোনো ইলাহ নেই এবং মুহাম্মাদ সাল্লাল্লাহু আলাইহি ওয়া সাল্লাম আল্লাহর বান্দা ও রাসূল। নামাজ প্রতিষ্ঠা করা। যাকাত প্রদান করা। বায়তুল্লাহর হজ্ব করা ও রমজানের রোজা রাখা।’(বর্ণনায় বুখারী ও মুসলিম)</string>

    <string name="adaikarir_hukum">যাকাত অনাদায়কারীর হুকুমঃ </string>
    <string name="adaikarir_hukumD">যাকাত অনাদায়কারী হয়তো অস্বীকৃতিবশত অথবা কৃপণতা হেতু যাকাত প্রদান করে না।\n\n<b>১ - অস্বীকৃতিবশত যাকাত অনাদায়কারী</b>\n\nযে ব্যক্তি জেনেশুনে যাকাত অস্বীকার করল সে সর্বসম্মতিক্রমে কুফরি করল; কেননা সে আল্লাহ ও তাঁর রাসূলের নির্দেশ অমান্য করল।\n\nযাকাত আদায়ে অীকৃতিজ্ঞাপনকারীদের উদ্দেশে আবু বকর সিদ্দীক রাযি. বলেছিলেন,‘আল্লাহর কসম, যারা নামাজ ও যাকাতের মধ্যে পার্থক্য করল তাদের বিরুদ্ধে আমি অবশ্যই লড়াই করব। কারণ যাকাত হলো সম্পদের ওপর আরোপিত অধিকার। আল্লাহর কসম, তারা যদি আমাকে একটি রশি অর্পণ করতেও অস্বীকার করে, যা তারা রাসূলুল্লাহ সাল্লাল্লাহু আলাইহি ওয়া সাল্লামকে অর্পণ করত, তবে আমি এর জন্য তাদের বিরুদ্ধে অবশ্যই লড়াই করব।’(বর্ণনায় বুখারী)\n\n<b>২ - কৃপণতাবশত যাকাত অনাদায়কারী</b>\n\nযে ব্যক্তি কৃপণতাবশত যাকাত প্রদান করল না, তার কাছ থেকে শক্তিপ্রয়োগ করে হলেও যাকাত আদায় করা হবে। তবে এ আচরণের কারণে তাকে কাফের বলা হবে না। যদিও সে স্বেচ্ছায় যাকাত আদায় না করে একটি বড় অন্যায় ও পাপকর্ম করে ফেলেছে। এর প্রমাণ, যাকাত অনাদায়কারীর ব্যাপারে রাসূলুল্লাহ সাল্লাল্লাহু আলাইহি ওয়া সাল্লামের বাণী,,‘সোনা-রুপার মালিক যদি এ সবের হক আদায় না করে, তবে তা দিয়ে কিয়ামতের দিন আগুনের পাত তৈরি করা হবে, অতঃপর তা আগুনে গরম করা হবে এবং তা দিয়ে তার পার্শ্বদেশে, কপালে ও পিঠে ছেঁকা দেয়া হবে। পাত ঠান্ডা হয়ে গেলে আবারও তা গরম করে আনা হবে। আর এটা হবে এমন এক দিনে, যা হবে পঞ্চাশ হাজার বছরের পরিমাণ দীর্ঘ। বান্দাদের মাঝে শেষ ফয়সালা হওয়া পর্যন্ত এ প্রক্রিয়া চলমান থাকবে। ফয়সালা শেষ হলে তাদের একদলকে জন্নাতের ও অপর দলকে জাহান্নামের পথ দেখিয়ে দেয়া হবে।’(বর্ণনায় মুসলিম )\n\nআর যদি মানুষেরা যাকাত না দেয়ার উদ্দেশ্যে লড়াইয়ে লিপ্ত হয় তবে তাদের বিরুদ্ধে লড়াই করে যেতে হবে যতক্ষণ না তারা আল্লাহর নির্দেশ মানতে সম্মত হয়। আল্লাহ তাআলা বলেন:\n(فَإِن تَابُواْ وَأَقَامُواْ ٱلصَّلَوٰةَ وَءَاتَوُاْ ٱلزَّكَوٰةَ فَخَلُّواْ سَبِيلَهُمۡۚ إِنَّ ٱللَّهَ غَفُورٞ رَّحِيمٞ) [التوبة:5]\n\n{তবে যদি তারা তাওবা করে এবং সালাত কায়েম করে, আর যাকাত দেয়, তাহলে তাদের পথ ছেড়ে দাও। নিশ্চয় আল্লাহ বড়ই ক্ষমাশীল, পরম দয়ালু।} [সূরা আত-তাওবা:৫] হাদীসে এসেছে, রাসূলুল্লাহ সাল্লাল্লাহু আলাইহি ওয়া সাল্লাম বলেছেন, ‘আমাকে মানুষের বিরুদ্ধে লড়াই করার নির্দেশ দেয়া হয়েছে যতক্ষণ না তারা সাক্ষ্য দেবে যে, আল্লাহ ব্যতীত কোনো ইলাহ নেই এবং মুহাম্মাদ আল্লাহর রাসূল। যদি তারা এরূপ করে তবে আমার পক্ষ থেকে তাদের জান-মালের নিরাপত্তা রয়েছে, তবে ইসলামের হক ব্যতীত। আর তাদের হিসাব আল্লাহর কাছে।’(বর্ণনায় বুখারী ও মুসলিম)</string>

    <string name="hikmat">যাকাত ফরজ করার হিকমতঃ </string>
    <string name="hikmatD">১- কৃপণতা, পাপ ও অন্যায় থেকে মানব-অন্তর পবিত্র করা। আল্লাহ তাআলা বলেন:\n(خُذۡ مِنۡ أَمۡوَٰلِهِمۡ صَدَقَةٗ تُطَهِّرُهُمۡ وَتُزَكِّيهِم بِهَا ) [التوبة:103].\n\n{তাদের সম্পদ থেকে সদকা নাও। এর মাধ্যমে তাদেরকে তুমি পবিত্র ও পরিশুদ্ধ করবে।}[সূরা আত-তাওবা:১০৩]\n\n২- সম্পদ পবিত্র ও বৃদ্ধি করা এবং তাতে বরকত আকৃষ্ট করা। রাসূলুল্লাহ সাল্লাল্লাহু আলাইহি ওয়া সাল্লাম বলেন, ‘সদকা কোনো সম্পদকে কমিয়ে দেয়নি।’(বর্ণনায় মুসলিম)\n\n৩- আল্লাহ তাআলার নির্দেশ বাস্তবায়নের ক্ষেত্রে মানুষ আনুগত্য প্রকাশ করে কি না, আল্লাহর ভালোবাসাকে সম্পদের ভালোবাসার ওপর প্রাধান্য দেয় কি না, এ ব্যাপারে পরীক্ষা করে দেখা।\n\n৪- দরিদ্রদের প্রতি সহমর্মিতা প্রদর্শন ও অভাবীদের প্রয়োজন পূরণ করা। এর মাধ্যমে মুসলমানদের পরস্পরের মাঝে মহব্বত বৃদ্ধি পায় এবং মুসলিম সমাজের সদস্যদের মাঝে সর্বোচ্চ পর্যায়ের সামাজিক সহযোগিতা কায়েম হয়।\n\n৫- আল্লাহর পথে দান-খয়রাত ও সম্পদ ব্যয়ের অভ্যাস গড়ে তোলা।</string>

    <string name="fozilat">যাকাতের ফজিলতঃ </string>
    <string name="fozilatD">১- যাকাত আল্লাহর রহমত লাভের কারণ। আল্লাহ তাআলা বলেন :\n(وَرَحۡمَتِي وَسِعَتۡ كُلَّ شَيۡءٖۚ فَسَأَكۡتُبُهَا لِلَّذِينَ يَتَّقُونَ وَيُؤۡتُونَ ٱلزَّكَوٰةَ ) [الأعراف:156]\n\n{আর আমার রহমত সব বস্তুকে পরিব্যাপ্ত করেছে। সুতরাং আমি তা লিখে দেব তাদের জন্য যারা তাকওয়া অবলম্বন করে এবং যাকাত প্রদান করে।} [সূরা আল আরাফ:১৫৬]\n\n২- যাকাত প্রদান আল্লাহর সাহায্য লাভের শর্ত। আল্লাহ তাআলা বলেন:\n(وَلَيَنصُرَنَّ ٱللَّهُ مَن يَنصُرُهُۥٓۚ إِنَّ ٱللَّهَ لَقَوِيٌّ عَزِيزٌ ٤٠ ٱلَّذِينَ إِن مَّكَّنَّٰهُمۡ فِي ٱلۡأَرۡضِ أَقَامُواْ ٱلصَّلَوٰةَ وَءَاتَوُاْ) [الحج:40-41]\n\n{আর আল্লাহ অবশ্যই তাকে সাহায্য করেন, যে তাকে সাহায্য করে। নিশ্চয় আল্লাহ শক্তিমান, পরাক্রমশালী। তারা এমন যাদেরকে আমি জমিনে ক্ষমতা দান করলে তারা সালাত কায়েম করবে এবং যাকাত দেবে…।}[সূরা আল হাজ্জ: ৪০-৪১]\n\n৩- যাকাত প্রদান গুনাহ মাফ হওয়ার কারণ। নবী সাল্লাল্লাহু আলাইহি ওয়া সাল্লাম বলেন, ‘সদকা গুনাহকে নিভিয়ে দেয় যেভাবে পানি আগুন নেভায়।’(বর্ণনায় বুখারী)</string>

    <string name="condition">যাকাত ফরজ হওয়ার শর্তাবলীঃ </string>
    <string name="conditionD"><b>১ - ইসলাম</b>\nঅতএব অমুসলিমের পক্ষ থেকে যাকাত প্রদান শুদ্ধ হবে না; কেননা আল্লাহ তাআলা অমুসলিমদের আমল কবুল করেন না।\n\n<b>২- স্বাধীনতা</b>\nঅতএব দাসের ওপর যাকাত ফরজ হবে না; কেননা দাসের সম্পদের মালিক তার মনিব।\n\n<b>৩- নিসাব পরিমাণ সম্পদের মালিক হওয়া</b>\nনিসাব হলো সুনির্দিষ্ট পরিমাণ সম্পদ যা অর্জিত হলে যাকাত ফরজ হয়।\n\n<b>নিসাবের শর্তাবলীঃ </b>\nক. নিসাব পরিমাণ সম্পদ ব্যক্তির অবশ্য প্রয়োজনীয় সম্পদের বাইরে হতে হবে, যেমন খাদ্য, পরিধেয় পোশাক, থাকার ঘর ইত্যাদি; কেননা যাকাত ফরজ হয় গরীবদের প্রতি সহমর্মিতা প্রকাশের উদ্দেশে। তাই সম্পদের মালিককে অবশ্যই অমুখাপেক্ষী হতে হবে।\n\nখ. নিসাব পরিমাণ সম্পদ ব্যক্তিমালিকানাধীন হতে হবে, অতএব এমন সম্পদে যাকাত ফরজ হবে না যা সুনির্দিষ্ট কোনো ব্যক্তির মালিকানাধীন নয়, যেমন মসজিদের জন্য জমাকৃত টাকা অথবা জনস্বার্থে ব্যয়ের জন্য বরাদ্দকৃত টাকা অথবা যে সম্পদ সেবামূলক সংস্থার ফান্ডে জমা রয়েছে।\n\n<b>৪. সম্পদের উপর এক বছর অতিক্রান্ত হওয়া।</b>এক বছর অর্থ হিজরী বর্ষের পূর্ণ এক বছর\n\nঅর্থাৎ, নিসাব পরিমাণ সম্পদ ব্যক্তির মালিকানায় চান্দ্রমাস হিসাবে বারো মাস অতিক্রান্ত হতে হবে। অবশ্য এ শর্ত সোনা-রুপা, ব্যবসায়িক সম্পদ, গবাদিপশুর ক্ষেত্রে প্রযোজ্য। পক্ষান্তরে ফসল, ফলফলাদি, খনিজদ্রব্য ও গুপ্তধনের ক্ষেত্রে এক বছর অতিক্রান্ত হওয়া শর্ত নয়।</string>
    
    <string name="aday">যাকাত আদায়ঃ </string>
    <string name="adayD"><b>যাকাত আদায় করার সময়ঃ </b>\nযাকাত প্রদানে সক্ষম ব্যক্তির যাকাত ফরজ হওয়ার সাথে সাথে তা আদায় করে দেয়া ফরজ। বিশেষ কোনো সমস্যা ব্যতীত যাকাত ফরজ হওয়ার মুহূর্ত থেকে আদায়প্রক্রিয়া বিলম্বিত করা বৈধ নয়, যেমন সম্পদ বিদেশে থাকা অথবা আটককৃত অবস্থায় থাকা।\n\nএর দলিল আল্লাহ তাআলার বাণী :\n(وَءَاتُواْ حَقَّهُۥ يَوۡمَ حَصَادِهِۦۖ) [الأنعام:141]\n\n{এবং ফল কাটার দিনেই তার হক দিয়ে দাও।}\n[সূরা আল আনআম: ১৪১]\n\n(وَءَاتُواْ ٱلزَّكَوٰةَ ) [النور:56]\n{আর তোমরা যাকাত আদায় করো}[ সূরা আন-নূর:৫৬]\n\nএখানে আল্লাহ তাআলা অনুজ্ঞাসূচক ক্রিয়াপদ ব্যবহার করেছেন, যার দাবি হলো অনতিবিলম্বে বাস্তবায়ন করা।\n\n<b>সময় আসার পূর্বেই যাকাত আদায় প্রসঙ্গ</b>\nমুসলমানদের বিশেষ প্রয়োজন দেখা দিলে সময় আসার পূর্বেই যাকাত আদায় করে দেয়া বৈধ রয়েছে। ইবনে আব্বাস রাযি. থেকে বর্ণিত, রাসূলুল্লাহ সাল্লাল্লাহু আলাইহি ওয়া সাল্লাম যখন উমর রাযি. কে যাকাত সংগ্রহের জন্য পাঠান, তিনি ফিরে এসে আব্বাস রযি. এর বিরুদ্ধে অভিযোগ করে বলেন, ‘আব্বাস আমাকে তার যাকাত প্রদান করেনি’। রাসূলুল্লাহ সাল্লাল্লাহু আলাইহি ওয়াসাল্লাম বললেন,‘হে উমর, আব্বাসের কাছ থেকে আমরা দু বছরের যাকাত অগ্রীম নিয়ে নিয়েছি।’(বর্ণনায় দারাকুতনী)\n\n<b>যাকাত বণ্টনের জায়গা</b>\nউত্তম হলো যে দেশে সম্পদ সে দেশবাসীর মধ্যেই যাকাত বণ্টন করে দেয়া, তবে প্রয়োজন দেখা দিলে কাছের অথবা দূরের যেকোনো দেশে যাকাতের টাকা পাঠিয়ে দেয়া চলে। উদাহরণস্বরূপ দূরবর্তী দেশ অধিক দরিদ্র অথবা দূরবর্তী দেশে যাকাত প্রদানকারীর আত্মীয়-স্বজন রয়েছে, যারা যাকাত প্রদানকারীর দেশের দরিদ্রদের মতোই দরিদ্র, এমতাবস্থায় আত্মীয়-স্বজনকে প্রদান করাটা অধিক উপকারী বলে বিবেচিত হবে; কেননা এক্ষেত্রে একদিকে আত্মীয়তা-সম্পর্ক রক্ষা হবে, অন্যদিকে যাকাতও আদায় হয়ে যাবে।\n\n<b>যাকাত পাওয়ার বেশি হকদার কে?</b>\nযাকাত পাওয়ার বেশি হকদার ও অধিক প্রয়োজনগ্রস্ত কে, তা অনুসন্ধান করে বের করতে যাকাত প্রদানকারীকে শ্রম দিতে হবে। যাকাত পাওয়ার হকদারির গুণ যার মধ্যে বেশি পাওয়া যাবে তাকে যাকাত প্রদান করা অধিক উত্তম হবে, যেমন নিকটবর্তী গরীব অথবা তালেবে ইলম ইত্যাদি।</string>
</resources>